<resources>
    <string name="app_name">Твой Дневник</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Твой дневник</string>
    <!-- <string name="nav_header_subtitle" translatable="false">Well, Keep it simple</string> -->
    <string name="nav_header_subtitle" translatable="false">©Владимиров Владислав</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Задания</string>
    <string name="menu_gallery">Личный кабинет</string>
    <string name="menu_slideshow">Настройки</string>
    <string name="familia">Фамилия</string>
    <string name="name">Имя</string>
    <string name="otchestvo">Отчество</string>
    <string name="dow_1">ПН</string>
    <string name="dow_2">ВТ</string>
    <string name="dow_3">СР</string>
    <string name="dow_4">ЧТ</string>
    <string name="dow_5">ПТ</string>
    <string name="dow_6">СБ</string>

    <!-- Strings used for fragments for navigation -->

    <string-array name="sortBy">
        <item>Дедлайн</item>
        <item>Предмет</item>
        <item>Тип</item>
    </string-array>

    <string-array name="sortType">
        <item>▲</item>
        <item>▼</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="view">Просмотреть</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>