<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tasks">

    <fragment
        android:id="@+id/nav_tasks"
        android:name="well.keepitsimple.dnevnik.ui.tasks.TasksFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_tasks" >
        <action
            android:id="@+id/action_nav_tasks_to_nav_createhw"
            app:destination="@id/nav_createhw" />
        <action
            android:id="@+id/action_nav_tasks_to_nav_lk"
            app:destination="@id/nav_lk" />
        <action
            android:id="@+id/action_nav_tasks_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_tasks_to_nav_timetables"
            app:destination="@id/nav_timetables" />
        <action
            android:id="@+id/action_nav_tasks_to_settingsFragment"
            app:destination="@id/nav_groups" />
    </fragment>

    <fragment
        android:id="@+id/nav_lk"
        android:name="well.keepitsimple.dnevnik.ui.lk.LkFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_lk" />

    <fragment
        android:id="@+id/nav_createhw"
        android:name="well.keepitsimple.dnevnik.ui.lk.LkFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_create_homework" >
        <action
            android:id="@+id/action_nav_createhw_to_nav_tasks"
            app:destination="@id/nav_tasks" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="well.keepitsimple.dnevnik.ui.settings.SettingsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_timetables"
        android:name="well.keepitsimple.dnevnik.ui.timetables.TimetablesFragment"
        android:label="Расписание"
        tools:layout="@layout/fragment_timetables" >
        <action
            android:id="@+id/action_nav_timetables_to_createLesson"
            app:destination="@id/nav_createLesson" />
    </fragment>
    <fragment
        android:id="@+id/nav_createLesson"
        android:name="well.keepitsimple.dnevnik.ui.timetables.lessons.CreateLesson"
        android:label="fragment_create_lesson"
        tools:layout="@layout/fragment_create_lesson" />
    <fragment
        android:id="@+id/nav_groups"
        android:name="well.keepitsimple.dnevnik.ui.groups.GroupsFragment"
        android:label="SettingsFragment" >
        <action
            android:id="@+id/action_nav_groups_to_createGroup"
            app:destination="@id/createGroup" />
    </fragment>
    <fragment
        android:id="@+id/createGroup"
        android:name="well.keepitsimple.dnevnik.ui.groups.CreateGroup"
        android:label="fragment_create_group"
        tools:layout="@layout/fragment_create_group" />

</navigation>